# bitshuffle

./: .appveyor.yml  CMakeLists.txt  bitshuffleConfig.cmake.in  setup.py
.github/workflows/: c-cpp.yml  main.yml
bitshuffle/: __init__.py  bitshuffle.py
bitshuffle/tests/: test_bitshuffle.py
conda-recipe/: build_bitshuffle.bat  build_bitshuffle.sh  build_python.sh  meta.yaml
src/: bitshuffle.h  bshuf_h5filter.h
